cluster/apps/nocodb/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nocodb
  labels:
    app: nocodb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      containers:
        - name: nocodb
          image: nocodb/nocodb:latest
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - mountPath: /usr/app/data
              name: data
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nocodb
