cluster/apps/nocodb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb
  labels:
    app: nocodb

spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: nocodb
