cluster/apps/nocodb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb
  labels:
    app: nocodb
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "google-spreadsheet"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nocodb.kblb.io
      secretName: my-certs-nocodb
  rules:
    - host: nocodb.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nocodb
                port:
                  name: http
